feat: 调整rabbit客户端允许配置在交换机，队列不存在时自动创建
